<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="20dp">
    
    <RelativeLayout
        android:id="@+id/alarm_list_item_rellay_container"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/alarm_list_item_click">
	<RelativeLayout
	    android:id="@+id/alarm_list_item_rellay_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="12dp"
	    android:paddingRight="12dp"
	    android:paddingTop="4dp"
	    android:paddingBottom="4dp">
	    <com.tubealarmclock.customview.TypefacedTextView
		    xmlns:app="http://schemas.android.com/apk/res-auto"
		    android:id="@+id/alarm_list_item_txt_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="26sp"
		    android:text="7:15"
		    android:layout_marginRight="2dp"
		    app:typeface="ROBOTO-BOLDCONDENSED.TTF"/>
	    <com.tubealarmclock.customview.TypefacedTextView
		    xmlns:app="http://schemas.android.com/apk/res-auto"
		    android:id="@+id/alarm_list_item_txt_ampm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@id/alarm_list_item_txt_time"
		    android:layout_alignTop="@id/alarm_list_item_txt_time"
		    android:textSize="14sp"
		    android:layout_marginTop="4dp"
		    android:text="@string/AM"
		    app:typeface="ROBOTO-REGULAR.TTF"/>
	    <Switch 
	        android:id="@+id/alarm_list_item_switch_alarm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@id/alarm_list_item_txt_time"
	        android:layout_marginTop="3dp"
	        android:switchTextAppearance="@style/AlarmSwitchText"
	        android:textOn="@string/ON"
	        android:textOff="@string/OFF"/>
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="4.5dp"
	        android:layout_toRightOf="@id/alarm_list_item_txt_time"
	        android:layout_alignBottom="@id/alarm_list_item_txt_time">
	    	<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_mon"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/MON"
			    app:typeface="ROBOTO-REGULAR.TTF"/>    
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_tue"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/TUE"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_wed"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/WED"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_thu"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/THU"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_fri"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/FRI"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_sat"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/SAT"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
			<com.tubealarmclock.customview.TypefacedTextView
			    xmlns:app="http://schemas.android.com/apk/res-auto"
			    android:id="@+id/alarm_list_item_txt_sun"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AlarmListItemWeekday"
			    android:text="@string/SUN"
			    app:typeface="ROBOTO-REGULAR.TTF"/>   
	    </LinearLayout>
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/alarm_list_item_linlay_youtube_thumb_bg"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/alarm_list_item_rellay_header"
	    android:layout_margin="0dp"
	    android:padding="0dp"
	    android:gravity="center"
	    android:background="@color/transparent_dark_blue">
	    <com.google.android.youtube.player.YouTubeThumbnailView
	        android:id="@+id/alarm_list_item_youtube_thumb"
	        android:layout_width="336dp"
	        android:layout_height="189dp"/>
	</LinearLayout>
    <TextView
        android:id="@+id/alarm_list_item_txt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_list_item_rellay_header"
        android:layout_alignParentRight="true"
        android:padding="6sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:background="@color/transparent_black"
        android:visibility="gone"
        android:text="2:46"/>
	<com.tubealarmclock.customview.TypefacedTextView
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/alarm_list_item_txt_video_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/alarm_list_item_linlay_youtube_thumb_bg"
	    android:paddingTop="10sp"
	    android:paddingBottom="10sp"
	    android:paddingLeft="12dp"
	    android:paddingRight="12dp"
	    android:textSize="18sp"
	    android:text="Video Title"
	    app:typeface="ROBOTO-LIGHT.TTF"/>
	</RelativeLayout>
</RelativeLayout>
