<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="55dp" 
    android:background="@drawable/blue_bubble_bg"
    android:textColor="@color/white"
    tools:context=".EditAlarmActivity" >
    <!-- paddingTop of 55dp is needed because of the transparent actionbar, because it causes all the content to shift up as if there is no actionbar -->
	
    <LinearLayout
        android:id="@+id/activity_edit_alarm_linlay_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp">
        <RelativeLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.tubealarmclock.customview.TypefacedTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_edit_alarm_txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="0sp"
                android:paddingTop="0sp"
                android:paddingBottom="0sp"
                android:text="07:15"
                app:typeface="ROBOTO-BOLDCONDENSED.TTF"/>
            <ToggleButton 
                android:id="@+id/activity_edit_alarm_togglebtn_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/activity_edit_alarm_txt_time"
                android:layout_alignTop="@id/activity_edit_alarm_txt_time"
                android:background="@null"
                android:textSize="25sp"
                android:textColor="@drawable/togglebtn_day_toggle"
                android:layout_marginTop="8sp"
                android:textOn="@string/AM"
                android:textOff="@string/AM"/>
            <ToggleButton 
                android:id="@+id/activity_edit_alarm_togglebtn_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/activity_edit_alarm_txt_time"
                android:layout_alignBottom="@id/activity_edit_alarm_txt_time"
                android:background="@null"
                android:textSize="25sp"
                android:textColor="@drawable/togglebtn_day_toggle"
                android:layout_marginBottom="5sp"
                android:textOn="@string/PM"
                android:textOff="@string/PM"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_edit_alarm_linlay_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/activity_edit_alarm_linlay_time">
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_mon"
            android:textOn="@string/MON"
            android:textOff="@string/MON"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_tue"
            android:textOn="@string/TUE"
            android:textOff="@string/TUE"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_wed"
            android:textOn="@string/WED"
            android:textOff="@string/WED"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_thu"
            android:textOn="@string/THU"
            android:textOff="@string/THU"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_fri"
            android:textOn="@string/FRI"
            android:textOff="@string/FRI"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_sat"
            android:textOn="@string/SAT"
            android:textOff="@string/SAT"
            style="@style/DayToggleButton"/>
        <ToggleButton 
            android:id="@+id/activity_edit_alarm_togglebtn_sun"
            android:textOn="@string/SUN"
            android:textOff="@string/SUN"
            style="@style/DayToggleButton"/>
    </LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/activity_edit_alarm_linlay_days"
	    android:background="@color/transparent_dark_blue"
	    android:layout_marginTop="25dp">
        <LinearLayout
            android:id="@+id/activity_edit_alarm_linlay_video_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
			    android:id="@+id/activity_edit_alarm_btn_alarm_settings"
			    android:layout_height="wrap_content"
			    android:layout_width="match_parent"
			    android:layout_weight="1"
			    android:text="@string/settings"
			    android:drawableLeft="@drawable/icon_settings"
			    android:textColor="@color/white"
			    android:drawablePadding="5sp"
			    android:paddingLeft="15sp"
			    android:paddingRight="15sp"
			    style="?android:attr/borderlessButtonStyle"/>
            <Button
			    android:id="@+id/activity_edit_alarm_btn_alarm_settings_on"
			    android:layout_height="wrap_content"
			    android:layout_width="match_parent"
			    android:layout_weight="1"
			    android:text="@string/settings"
			    android:drawableLeft="@drawable/icon_settings"
			    android:textColor="@color/white"
			    android:drawablePadding="5sp"
			    android:paddingLeft="15sp"
			    android:paddingRight="15sp"
			    style="?android:attr/borderlessButtonStyle"
			    android:background="@color/barely_visible_white"
			    android:visibility="gone"/>
             <Button
			    android:id="@+id/activity_edit_alarm_btn_edit_vid"
			    android:layout_height="wrap_content"
			    android:layout_width="match_parent"
			    android:layout_weight="1"
			    android:text="@string/search"
			    android:drawableLeft="@drawable/icon_search"
			    android:textColor="@color/white"
			    android:drawablePadding="5sp"
			    android:paddingLeft="15sp"
			    android:paddingRight="15sp"
			    style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/activity_edit_alarm_linlay_video_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/barely_visible_white"
            android:layout_below="@id/activity_edit_alarm_linlay_video_buttons">
            <com.google.android.youtube.player.YouTubePlayerView
	            android:id="@+id/activity_edit_alarm_youtube_player"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"/>
	        <LinearLayout 
	            android:id="@+id/activity_edit_alarm_linlay_settings"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/activity_edit_alarm_linlay_video_buttons"
	            android:orientation="vertical"
	            android:gravity="center_vertical"
	            android:visibility="gone">
	            <com.tubealarmclock.customview.TypefacedTextView
			  	    xmlns:app="http://schemas.android.com/apk/res-auto"
			  	    android:id="@+id/activity_edit_alarm_txt_settings_ringtone"
			  	    android:layout_width="match_parent"
			  	    android:layout_height="wrap_content"
			  	    android:paddingLeft="20dp"
			  	    android:paddingRight="20dp"
			  	    android:layout_marginBottom="3dp"
			  	    android:textSize="22sp"
			  	    android:text="@string/back_up_ringtone"
			  	    app:typeface="ROBOTO-REGULAR.TTF"/>
	            <com.tubealarmclock.customview.TypefacedTextView
			  	    xmlns:app="http://schemas.android.com/apk/res-auto"
			  	    android:id="@+id/activity_edit_alarm_txt_settings_ringtone_subtext"
			  	    android:layout_width="match_parent"
			  	    android:layout_height="wrap_content"
			  	    android:paddingLeft="20dp"
			  	    android:paddingRight="20dp"
			  	    android:textSize="14sp"
			  	    android:text="@string/back_up_ringtone_desc"
			  	    app:typeface="ROBOTO-LIGHT.TTF"/>
	            <Button
				    android:id="@+id/activity_edit_alarm_btn_edit_ringtone"
				    android:layout_height="wrap_content"
				    android:layout_width="wrap_content"
				    android:text="@string/select_ringtone"
				    android:drawableLeft="@drawable/icon_volume_on"
				    android:textColor="@color/white"
				    android:drawablePadding="5sp"
				    android:paddingLeft="15sp"
				    android:paddingRight="15sp"
				    android:layout_marginTop="10dp"
				    style="?android:attr/borderlessButtonStyle"/>
	        </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:id="@+id/activity_edit_alarm_txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_edit_alarm_linlay_video_buttons"
            android:layout_alignParentRight="true"
            android:padding="6sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@color/transparent_black"
            android:text="2:46"/>
	  	<com.tubealarmclock.customview.TypefacedTextView
	  	    xmlns:app="http://schemas.android.com/apk/res-auto"
	  	    android:id="@+id/activity_edit_alarm_txt_video_title"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="wrap_content"
	  	    android:layout_below="@id/activity_edit_alarm_linlay_video_container"
	  	    android:padding="10sp"
	  	    android:textSize="18sp"
	  	    android:text="Video Title"
	  	    app:typeface="ROBOTO-LIGHT.TTF"/>
	</RelativeLayout>
</RelativeLayout>
